2006-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sgi.c (ReadSGIImage): Mostly applied Debian patch for
	CVE-2006-4144 security issue related to RLE decoding.  Also added
	complete verification of file header.
	* magick/image.c (ComputePixelError): Add progress monitor.
	(GetImageStatisticsMean): Call progress monitor less often.
	(GetImageStatisticsVariance): Call progress monitor less often.

2006-08-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): ImageInfo 'endian' option now
	controls TIFF byte-order rather than bit-order when writing.
	* coders/png.c (ReadOnePNGImage): Fix compilation problem.  Patch
	submitted by Aron Stansvik.

2006-07-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (WriteJPEGImage): Clear the JPEG library
	structures in order to ensure a completely clean slate.

2006-06-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (ConvertImageCommand): Fix memory leaks which
	occured when an image was not returned.
	* magick/command.c (IdentifyImageCommand): Ditto.
	* magick/command.c (MogrifyImageCommand): Ditto.

2006-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Add mention of -resample to convert and
	mogrify usage messages.

2006-05-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure.ac: Fix arguments to AC_CHECK_HEADER.

2006-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): -define tiff:alpha= override was
	only working if the TIFFTAG_EXTRASAMPLES tag was present.  Now it
	is always available when an alpha channel is present.

2006-05-11  JH  <jh@ops.everybox.com>

	* GraphicsMagick.spec.in (files devel): Include
	%{_libdir}/lib%{name}Wand.so.

2006-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTGhostscriptEnumerateVersions): Recent GNU
	Ghostscript identifies itself as "GPL Ghostscript".
