@@ -258,14 +258,16 @@ static CompositeOperator GIMPBlendModeToCompositeOperator( unsigned long blendMo
 %
 %    o string: The address of a character buffer.
 %
+%    o max: Length of 'string' array.
+%
 %
 */
-static char *ReadBlobStringWithLongSize(Image *image,char *string)
+static char *ReadBlobStringWithLongSize(Image *image,char *string,size_t max)
 {
   int
     c;
 
-  register long
+  register unsigned long
     i;
 
   unsigned long
@@ -273,8 +275,9 @@ static char *ReadBlobStringWithLongSize(Image *image,char *string)
 
   assert(image != (Image *) NULL);
   assert(image->signature == MagickSignature);
+  assert(max != 0);
   length = ReadBlobMSBLong(image);
-  for (i=0; i < (long) length; i++)
+  for (i=0; i < Min(length,max-1); i++)
   {
     c=ReadBlobByte(image);
     if (c == EOF)
@@ -282,6 +285,7 @@ static char *ReadBlobStringWithLongSize(Image *image,char *string)
     string[i]=c;
   }
   string[i]='\0';
+  SeekBlob(image, length-i, SEEK_CUR);
   return(string);
 }
 
@@ -692,7 +696,8 @@ static int ReadOneLayer( Image* image, XCFDocInfo* inDocInfo, XCFLayerInfo*
   outLayer->width = ReadBlobMSBLong(image);
   outLayer->height = ReadBlobMSBLong(image);
   outLayer->type = ReadBlobMSBLong(image);
-  (void) ReadBlobStringWithLongSize(image, outLayer->name);
+  (void) ReadBlobStringWithLongSize(image, outLayer->name,
+                                           sizeof(outLayer->name));
 
   /* allocate the image for this layer */
   outLayer->image=CloneImage(image,outLayer->width, outLayer->height,True,
@@ -702,7 +707,7 @@ static int ReadOneLayer( Image* image, XCFDocInfo* inDocInfo, XCFLayerInfo*
 
   /* read the layer properties! */
   foundPropEnd = 0;
-  while ( !foundPropEnd ) {
+  while ( !foundPropEnd && !EOFBlob(image) ) {
     PropType    prop_type = (PropType) ReadBlobMSBLong(image);
     unsigned long  prop_size = ReadBlobMSBLong(image);
 
@@ -776,7 +781,7 @@ static int ReadOneLayer( Image* image, XCFDocInfo* inDocInfo, XCFLayerInfo*
           unsigned int amount;
 
           /* read over it... */
-          while (prop_size > 0)
+          while (prop_size > 0 && !EOFBlob(image))
             {
               amount = Min (16, prop_size);
               for (i=0; i<(long)amount; i++)
@@ -787,6 +792,9 @@ static int ReadOneLayer( Image* image, XCFDocInfo* inDocInfo, XCFLayerInfo*
         break;
       }
   }
+
+  if (!foundPropEnd)
+    return False;
 
   /* clear the image based on the layer opacity */
   SetImage(outLayer->image,(Quantum)(255-outLayer->opacity));
@@ -936,7 +944,7 @@ static Image *ReadXCFImage(const ImageInfo *image_info,ExceptionInfo *exception)
   image->matte=True;  /* XCF always has a matte! */
 
   /* read properties */
-  while ( !foundPropEnd ) {
+  while ( !foundPropEnd && !EOFBlob(image) ) {
     PropType    prop_type = (PropType) ReadBlobMSBLong(image);
     unsigned long  prop_size = ReadBlobMSBLong(image);
 
@@ -1079,7 +1087,8 @@ static Image *ReadXCFImage(const ImageInfo *image_info,ExceptionInfo *exception)
         /*float  factor = (float) */ (void) ReadBlobMSBLong(image);
         /* unsigned long digits =  */ (void) ReadBlobMSBLong(image);
         for (i=0; i<5; i++)
-          (void) ReadBlobStringWithLongSize(image, unit_string);
+          (void) ReadBlobStringWithLongSize(image, unit_string,
+                                                   sizeof(unit_string));
       }
       break;
 
@@ -1092,7 +1101,7 @@ static Image *ReadXCFImage(const ImageInfo *image_info,ExceptionInfo *exception)
         long amount;
 
         /* read over it... */
-        while (prop_size > 0)
+        while (prop_size > 0 && !EOFBlob(image))
           {
             amount = (long) Min (16, prop_size);
             for (i=0; i<(unsigned long) amount; i++)
@@ -1103,6 +1112,9 @@ static Image *ReadXCFImage(const ImageInfo *image_info,ExceptionInfo *exception)
       break;
     }
   }
+
+  if (!foundPropEnd)
+    ThrowReaderException(CorruptImageError,ImproperImageHeader,image);
 
   if (image_info->ping && (image_info->subrange != 0)) {
     ; /* do nothing, we were just pinging! */
