@@ -1,3 +1,12 @@
+2006-09-11  Daniel Kobras  <kobras@debian.org>
+
+	* coders/xcf.c (ReadBlobStringWithLongSize): Add new parameter 'max'
+	to prevent overflowing the 'string' array. (CVE-2006-3743)
+	(ReadOneLayer): Adjust callers of ReadBlobStringWithLongSize(), and
+	guard against infinite loops on premature end-of-file.
+	(ReadXCFImage): Adjust callers of ReadBlobStringWithLongSize(), and
+	guard against infinite loops on premature end-of-file.
+
 2006-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/sgi.c (ReadSGIImage): Mostly applied Debian patch for
